Adicionar o perfil da Natália Valentin :)

--- a/students/natalia-valentin/natalia-valentin.html
+++ b/students/natalia-valentin/natalia-valentin.html
@@ -5,7 +5,7 @@
     <title>Currículo {reprograma}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://www.reprograma.com.br/assets/img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="https://www.reprograma.com.br/assets/img/favicon.ico" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
@@ -22,7 +22,7 @@
     <main>
         <section id="intro">
             <div>
-                <h1>{ Coraline  }</h1>
+                <h1>{ Natália Valentin }</h1>
                 <div class="background-DEBBDD">
                     <h2>O que eu quero</h2>
                 </div>
@@ -31,9 +31,9 @@
             <address>
                 <ul>
                     <li><img src="../../assets/img/location.png" alt=""><span>São Paulo</span></li>
-                    <li><img src="../../assets/img/linkedin.png" alt=""><a href="" id="linkedin">LinkdIn</a></li>
-                    <li><img src="../../assets/img/github.png" alt=""><a href="" id="github">GitHub</a></li>
-                    <li><img src="../../assets/img/envelope.png" alt=""><a href="" id="email">mail@email.com.br</a></li>
+                    <li><img src="../../assets/img/linkedin.png" alt=""><a target="blank" href="https://www.linkedin.com/in/nataliavalentin/" id="linkedin">LinkdIn</a></li>
+                    <li><img src="../../assets/img/github.png" alt=""><a target="blank" href="https://github.com/nataliavalentin" id="github">GitHub</a></li>
+                    <li><img src="../../assets/img/envelope.png" alt=""><a target="blank" href="mailto:nataliaferreiravalentin@gmail.com" id="email">mail@email.com.br</a></li>
                 </ul>
             </address>
         </section>
@@ -41,7 +41,8 @@
             <div class="background-DEBBDD">
                 <h2>Um pouco sobre mim</h2>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales justo quis viverra suscipit. Vivamus quis ex libero. Nulla sollicitudin leo pellentesque sem tincidunt euismod. Nullam convallis magna placerat justo pretium, sit amet rhoncus metus tincidunt. Fusce condimentum augue ut purus semper, nec ultricies lorem facilisis. Cras rhoncus velit id tellus bibendum mattis. Aliquam justo enim, accumsan eu placerat ut, mattis suscipit leo. Donec eu lacinia odio.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales justo quis viverra suscipit. Vivamus quis ex libero. Nulla sollicitudin leo pellentesque sem tincidunt euismod. Nullam convallis magna placerat justo pretium, sit amet
+                rhoncus metus tincidunt. Fusce condimentum augue ut purus semper, nec ultricies lorem facilisis. Cras rhoncus velit id tellus bibendum mattis. Aliquam justo enim, accumsan eu placerat ut, mattis suscipit leo. Donec eu lacinia odio.</p>
         </section>
         <section id="works">
             <div class="section-icon">
@@ -302,4 +303,5 @@
 </body>
 
 <script type="text/javascript" src="assets/js/textFit.js"></script>
+
 </html>
