--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Diretório de Currículos {reprograma}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://www.reprograma.com.br/assets/img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="https://www.reprograma.com.br/assets/img/favicon.ico" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
@@ -180,9 +180,9 @@
             </div>
             <div id="seu-nome26" class="student">
                 <div class="name">
-                    {SN}
+                    {Natália Valentin}
                 </div>
-                <a class="button" href="./students/seu_nome26/seu_nome26.html">ver mais</a>
+                <a class="button" href="./students/natalia-valentin/natalia-valentin.html">ver mais</a>
             </div>
             <div id="seu-nome27" class="student">
                 <div class="name">
@@ -261,6 +261,5 @@
 </body>
 
 <script type="text/javascript" src="assets/js/textFit.js"></script>
+
 </html>
-
-
