Finalização Trabalhos, Skills, Inicio Estudos

--- a/students/milena-melguiso/milena-melguiso.html
+++ b/students/milena-melguiso/milena-melguiso.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/cv.css">
+    <link rel="stylesheet" type="text/css" href="cv-milena-melguiso.css">
 </head>
 
 <body>
@@ -50,60 +50,50 @@
             <h2 class="background-DEBBDD">No que já trabalhei</h2>
             <div class="work">
                 <h3>{ Web Designer }</h3>
-                <p><b>Estadão </b>{ Set 2018 à Atual }</p>
-                <p>Consectetur adipiscing elit. Aliquam sodales justo quis viverra suscipit. Vivamus quis ex libero. Nulla sollicitudin leo pellentesque sem tincidunt euismod. </p>
+                <p class="LocalData"><b>Estadão </b><br>Set/2018 ao Momento atual</p>
+                <p>No Estadão estou dentro do Marketing na área de <b>Estratégias Digitais</b>. Uma área relativamente nova na empresa responsável pela migração digital da empresa. Desenvolvo e-mails marketings para área comercial e algumas outras peças digitais. </p>
             </div>
             <div class="work">
                 <h3>{ Web Designer }</h3>
-                <p><b>Gympass </b> {  Abr 2017 à Mar 2018 }</p>
-                <p>Coordenação técnica e tráfego na equipe de design do
-                marketing internacional, atuação na
-                criação de peças. Recebimentos e programação
-                de demandas. Desenhos de processos para
-                fluxos da realização das tarefas.</p>
+                <p class="LocalData"><b>Gympass </b><br>Abr/2017 à Mar/2018</p>
+                <p><b>Coordenação técnica e tráfego</b> na equipe de design do marketing internacional, atuação na criação de peças. Recebimentos e programação de demandas. Desenhos de processos para fluxos da realização das tarefas.</p>
             </div>
             <div class="work">
                 <h3>{ Designer Plena }</h3>
-                <p><b>Dinda.com.br </b>{ Jun 2016 à Mar 2017 }</p>
-                <p>Atuação na equipe de criação, com banners,
-                    campanhas. Peças promocionais para e-mail
-                    marketing e campanhas lançadas diariamente.
-                    Criação de e-mails marketings especiais para
-                    datas comemorativas e campanhas especiais.</p>
+                <p class="LocalData"><b>Dinda.com.br </b><br>Jun/2016 à Mar/2017</p>
+                <p>Atuei na equipe de criação com banners, campanhas, peças promocionais para e-mail marketing e campanhas lançadas diariamente. Criação de e-mails marketings especiais para datas comemorativas e campanhas especiais.</p>
             </div>
             <div class="work">
                 <h3>{ Projetos Especiais }</h3>
-                <p><b>Daybook </b>{ Ago 2015 à Mar 2016 }</p>
-                <p>Assistente de produção do Show realizado pela
-                    equipe da Taiff na Beauty Fair 2015, orçamento
-                    com fornecedores, agenda de treinamentos,
-                    organização de processos para equipe do show.
-                    Designer em criações gráficas e digitais. </p>
+                <p class="LocalData"><b>Daybook </b><br>Ago/2015 à Mar/2016</p>
+                <p><b>Assistente de produção</b> do Show realizado pela equipe da Taiff na Beauty Fair 2015, orçamento com fornecedores, agenda de treinamentos, organização de processos para equipe do show. Designer em criações gráficas e digitais. </p>
             </div>
             <div class="work">
                 <h3>{ Web Designer }</h3>
-                <p><b>Centauro</b> { Nov 2014 à Jun 2015 } </p>
+                <p class="LocalData"><b>Centauro</b><br>Nov/2014 à Jun/2015</p>
                 <p>Produção de e-mails marketings e peças de relacionamento para a equipe de B2B. Criação de peças promocionais para hotsites e e-mails.</p>
             </div>
             <div class="work">
                 <h3>{ Diretora de Arte }</h3>
-                <p><b>Ad.Dialeto </b>{ Out 2013 à Jul 2014 }</p>
-                <p>Parte da equipe especial para desenvolvimento, monitoramento e criação, trabalhando a demanda de forma mais cuidadosa tendo acesso a cada perfil de clientes e criando a certeza da efetividade na entrega.</p>
+                <p class="LocalData"><b>Ad.Dialeto </b><br>Out/2013 à Jul/2014</p>
+                <p>Parte da equipe especial para desenvolvimento, monitoramento e criação de <b>social media</b>. Trabalhando a demanda de forma mais cuidadosa tendo acesso a cada perfil de clientes e criando a certeza da efetividade na entrega.</p>
             </div>
             <div class="work">
                 <h3>{ Designer UI }</h3>
-                <p><b>NewAge Software </b>{ Fev 2013 à Set 2013 }</p>
-                <p>Consectetur adipiscing elit. Aliquam sodales justo quis viverra suscipit. Vivamus quis ex libero. Nulla sollicitudin leo pellentesque sem tincidunt euismod. </p>
+                <p class="LocalData"><b>NewAge Software </b><br>Fev/2013 à Set/2013</p>
+                <p>Designer UI/UX do projeto <b>Omie</b> (atualmente atua como empresa independente). Criando fluxos de navegação, interações, e características visuais. Essa versão do Omie foi apresentada na<b> 23º feira CONVECON</b> onde pude receber o feedback dos usuários. Também agregava ao meu dia a dia a atuação na equipe de Marketing, responsável por materiais promocionais, de endomarketing e identidade visual da empresa para feiras e apresentações comerciais. 
+            </p>
             </div>
             <div class="work">
                 <h3>{ Web Designer Jr. }</h3>
-                <p><b>R7.com </b>{ Jul 2012 à Nov 2012 }</p>
-                <p>Consectetur adipiscing elit. Aliquam sodales justo quis viverra suscipit. Vivamus quis ex libero. Nulla sollicitudin leo pellentesque sem tincidunt euismod. </p>
+                <p class="LocalData"><b>R7.com </b><br>Jul/2012 à Nov/2012</p>
+                <p>Atuei na <b>equipe de criação da redação</b> do portal. Tinha como demandas principais, banners de marcas internas, e-mails marketings disparados pela equipe de parceria e imagens e infográficos para matérias da redação.
+                </p>
             </div>
             <div class="work">
                 <h3>{ Diretora de Arte }</h3>
-                <p><b>Urbana Interativa </b>{ Jul 2007 à Jun 2012 }</p>
-                <p>Durante os cinco anos que atuei na equipe de criação, realizei peças digitais para o Banco Itaú. Sempre mostrando empenho e dedicação fui efetivada como assistente de arte e posteriormente promovida a Diretora de Arte Jr. Também realizei trabalhos como UI, para o primeiro aplicativo mobile do banco e participei da criação da UX para o site Uso consciente do dinheiro, um projeto de grande visibilidade na época.</p>
+                <p class="LocalData"><b>Urbana Interativa </b><br>Jul/2007 à Jun/2012</p>
+                <p>Durante os cinco anos que atuei na equipe de criação, realizei peças digitais para o<b> Banco Itaú</b>. Sempre mostrando empenho e dedicação fui efetivada como assistente de arte e posteriormente promovida a Diretora de Arte Jr. Também realizei trabalhos como UI, para o <b>primeiro aplicativo mobile</b> do banco e participei da criação da UX para o site Uso consciente do dinheiro, um projeto de grande visibilidade na época.</p>
             </div>
         </section>
         <section id="studies">
@@ -112,8 +102,10 @@
             </div>
             <h2 class="background-DEBBDD">O que já estudei</h2>
             <div class="study">
-                <h3>{ Reprograma Back-End }</h3>
-                <p>Consectetur adipiscing elit. Aliquam sodales justo quis viverra suscipit. Vivamus quis ex libero. Nulla sollicitudin leo pellentesque sem tincidunt euismod. </p>
+                <h3>{ Formação em Back-End }</h3>
+                <p class="LocalData"><b>Reprograma</b><br>2019</p>
+                <p>Tive o prazer de cursar a primeira turma de Back-end do Reprograma, sendo selecionada entre mais de 500 inscritas para uma das 36 vagas. Foram 14 semanas dedicadas a aprender como estruturar aplicações web, fazer gestão e comunicação com servidores remotos.O conteúdo apresentado durante o curso contemplou:<b> HTML, CSS, Java Script, Scrum, API, Node.JS e MongoDB.</b> 
+                </p>
             </div>
             <div class="study">
                 <h3>{ Pós Graduação em Tipografia }</h3>
@@ -351,4 +343,5 @@
 </body>
 
 <script type="text/javascript" src="assets/js/textFit.js"></script>
+<script type="text/javascript" src="skills.js" ></script>
 </html>
