CV completo Natália Valentin

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                 </div>
                 <a class="button" href="./students/seu_nome25/seu_nome25.html">ver mais</a>
             </div>
-            <div id="seu-nome26" class="student">
+            <div id="natalia-valentin" class="student">
                 <div class="name">
-                    {Natália Valentin}
+                    { Natália Valentin }
                 </div>
                 <a class="button" href="./students/natalia-valentin/natalia-valentin.html">ver mais</a>
             </div>
