--- a/students/andressa-tancredi/andressa-tancredi.html
+++ b/students/andressa-tancredi/andressa-tancredi.html
@@ -26,7 +26,7 @@
                 <div class="background-DEBBDD">
                     <h2>O que eu quero</h2>
                 </div>
-                <p>Atuar como desenvolvedora em projetos de tecnologia que tenham impactos reais na vida das pessoas.</p>
+                <p align="justify">Atuar como desenvolvedora em projetos de tecnologia que tenham impactos reais na vida das pessoas.</p>
             </div>
             <address>
                 <ul>
@@ -41,8 +41,14 @@
             <div class="background-DEBBDD">
                 <h2>Um pouco sobre mim</h2>
             </div>
-            <p>
-                Iniciei minha carreira na graduação em Engenharia Civil. Conquistei o primeiro estágio e após um ano subi de cargo para projetista junior, onde atuei por dois anos com projetos que me ensinaram como ter um pensamento lógico e analítico para soluções de problemas. Ao procurar novos desafios, trabalhei com projetos hospitalares in loco em obras, onde pude aprender muito sobre planejamento e comunicação. Dentro desse projeto, descobri a área de tecnologia ao tentar automatizar processos mecânicos que demandavam muito tempo. Me apaixonei por esse novo mundo e decidi trancar o curso de Engenharia Civil para focar nessa nova descoberta, na intenção de promover para outras pessoas o mesmo que senti quando entendi que a tecnologia estava evoluindo para tornar a vida das pessoas mais prática.</p>
+            <p align="justify"> Iniciei minha carreira na graduação em engenharia civil. Atuei por alguns anos com projetos que me ensinaram como ter um pensamento lógico e analítico para soluções de problemas.
+                <br><br>
+                Ao procurar novos desafios, trabalhei com projetos in loco em obras, onde pude aprender muito sobre planejamento e comunicação. Dentro desse projeto, descobri a área de tecnologia ao tentar automatizar processos mecânicos que demandavam muito tempo. Me apaixonei por esse novo mundo e decidi trancar o curso de engenharia civil para focar nessa nova descoberta, na intenção de promover para outras pessoas o mesmo que experimentei quando entendi o que a tecnologia poderia oferecer para tornar mais prática a vida das pessoas.
+                <br><br>
+                Acredito que minha experiência aliada aos novos conhecimentos obtidos em tecnologia possam adicionar insights construtivos em minha nova profissão de desenvolvedora.
+                <br><br>
+                Confira meus projetos desenvolvidos disponíveis em: <a target="blank" href="https://github.com/AndressaTancredi" id="github">GitHub.</a>
+            </p>
         </section>
         <section id="works">
             <div class="section-icon">
@@ -51,11 +57,11 @@
             <h2 class="background-DEBBDD">No que já trabalhei</h2>
             <div class="work">
                 <h3>{ Projetista Junior }</h3>
-                <p>Responsável pela organização de toda documentação técnica para emissão para o cliente final. Comunicação para compatibilização de projetos das equipes de Arquitetura e Engenharia Civil. </p>
+                <p align="justify">Responsável pela organização de toda documentação técnica para emissão para o cliente final. Comunicação para compatibilização de projetos das equipes de arquitetura e engenharia civil. </p>
             </div>
             <div class="work">
                 <h3>{ Projetista Pleno }</h3>
-                <p> Liderança do time de desenhistas juniores e execução de detalhamento construtivos em campo onde pude ter a oportunidade de conhecer a área de tecnologia. Automatização da impressão de desenhos e conversão de arquivos através de programação. </p>
+                <p align="justify"> Liderança do time de desenhistas e execução de detalhamento construtivos em campo onde pude ter a oportunidade de conhecer a área de tecnologia. Automatização da impressão de desenhos e conversão de arquivos. </p>
             </div>
         </section>
         <section id="studies">
@@ -65,15 +71,15 @@
             <h2 class="background-DEBBDD">O que já estudei</h2>
             <div class="study">
                 <h3>{ Reprograma }</h3>
-                <p> Bootcamp Backend onde aprendi a estruturar uma aplicação web, fazer a gestão e comunicação com o servidor remoto, e armazenamento de dados. Tecnologias aprendidas: HTML/CSS | Bootstrap | Javascript | Node.js | API | Testes Unitários | MongoDB | Scrum. </p>
+                <p align="justify"> Bootcamp Backend onde aprendi a estruturar uma aplicação web, fazer a gestão e comunicação com o servidor remoto e armazenamento de dados. Tecnologias aprendidas: HTML/CSS | Bootstrap | Javascript | Node.js | API | Testes Unitários | MongoDB | Scrum. </p>
             </div>
             <div class="study">
                 <h3>{ Análise e Desenvolvimento de Sistemas }</h3>
-                <p>Cursando segundo semestre de tecnologia pela Universidade Anhembi Morumbi. Matérias cursadas: Lógica de Programação, Fundamentos para Computação, Programação Orientada a Objetos, Sistemas Operacionais, Comunicação e Matemática. Projeto no primeiro semestre usando Python para exercícios em lógica de programação.</p>
+                <p align="justify">Cursando segundo semestre de tecnologia pela Universidade Anhembi Morumbi. Matérias cursadas: Lógica de Programação, Fundamentos para Computação, Programação Orientada a Objetos, Sistemas Operacionais, Comunicação e Matemática. Projeto no primeiro semestre usando Python para exercícios em lógica de programação.</p>
             </div>
             <div class="study">
                 <h3>{ Engenharia Civil }</h3>
-                <p> Bacharel em Engenharia Civil cursado até o 4º ano. Pude desenvolver raciocínio lógico e analítico voltado a solução de problemas devido a grande quantidade de matérias voltadas para matématica, estatística e física. </p>
+                <p align="justify"> Bacharel em Engenharia Civil cursado até o 4º ano. Pude desenvolver raciocínio lógico e analítico voltado a solução de problemas devido a grande quantidade de matérias voltadas para matématica, estatística e física. </p>
             </div>
         </section>
         <section id="interests">
@@ -82,12 +88,13 @@
             </div>
             <h2 class="background-DEBBDD">Meus outros aprendizados e interesses</h2>
             <div class="interest">
-                <h3>{ Projeto Question.Ninja }</h3>
-                <p>Projeto de conclusão de curso da Reprograma onde aplico meus conhecimento para criar uma plataforma de comunicação entre o Host e sua audiência visando a interação e aproximação do público com o interlocutor. Tecnologias usadas: HTML/CSS, Bootstrap, JavaScript, NodeJS e MongoDB.  </p>
+                <h3>{ Projeto YouAsk }</h3>
+                <p align="justify">Projeto sendo desenvolvido por mim, que disponibiliza uma plataforma de comunicação entre o host de um evento e sua audiência visando a interação e aproximação do público com o interlocutor. Nesta aplicação, é possível fazer perguntas durante uma apresentação, o host pode avaliar quais perguntas serão respondidas, garantindo assim, que sua audiência experimente um ambiente onde nenhuma dúvida é deixada sem resposta. As tecnologias usadas no projeto são: HTML/CSS, Bootstrap, JavaScript, NodeJS e MongoDB. Projeto disponível em: <a target="blank" href="https://YouAsk.app" id="github">YouAsk.app</a>
+                </p>
             </div>
             <div class="interest">
                 <h3>{ Idiomas }</h3>
-                <p>Tenho me esforçado cada dia mais para avançar na fluência em Inglês. Possuo certificação IELTS Academic com nota 7. </p>
+                <p align="justify">Tenho me esforçado cada dia mais para avançar na fluência em Inglês. Possuo certificação IELTS Academic.</p>
             </div>
         </section>
         <section id="skills">
