alteracao final profa- suelen

--- a/students/suelen-quadros/suelen-quadros.html
+++ b/students/suelen-quadros/suelen-quadros.html
@@ -42,9 +42,9 @@
             <div class="background-DEBBDD">
                 <h2>Um pouco sobre mim</h2>
             </div>
-            <p>Há quatros anos entrei na área da Tecnologia com zero conhecimento e um imenso desejo de aprendizado e crescimento.
-                Trabalhar com Suporte e experiência do usuário agregou ao meu perfil dedicado e curioso e me fez buscar mais conhecimento na área de desenvolvimento.
-                Através do bootcamp da Reprograma me senti encorajada a buscar novos desafios. 
+            <p>Há quatros anos entrei na área da Tecnologia com um imenso desejo de aprender.
+                Após adquirir experiência na área de Suporte do usuário fiquei instigada e curiosa em aprender desenvolvimento de sistemas e programação.
+                Finalmente após a Reprograma me sinto pronta para dar o próximo passo na área de TI.
                  </p>
         </section>
         <section id="works">
@@ -55,18 +55,17 @@
             <div class="work">
                 <h3>{ Analista de Suporte e Sistemas }</h3>
                 <h5>Maio 2015/Atual - Restoque Comércio e Confecções de Roupas S/A</h5>
-                <p>Analista Pleno - Atuo com:<br>
+                <p>Analista Pleno:<br>
                    -Reconhecimento e aplicação de novos sistemas e suas compatibilidades.<br>
-                   -Conhecimento com parametrização de sistema LINXPOS.<br>
-                   -Erros mais complexos passados do primeiro nível.<br>
+                   -Conhecimento com parametrização de sistema LINXPOS.<br>                
                    -Responsável pela integridade das informações entre a loja e a retaguarda atuando com ETL.<br>
                    -Responsável pelas promoções aplicadas na loja.<br> 
                    <br>
-                   Analista Junior - Atuava com:<br>
-                   -Suporte básico ao sistema onde entendia a rotina do sistema e relacionava os erros existentes para o nível 2.<br>
-                   -Operava com suporte para impressoras fiscais ECF, e novo modelo Fiscal SAT e NFC-e, onde havia erro de comunicação com sistema.<br>
-                   -Realizava a implantação do sistema, desde a configuração inicial, preparar o servidor, instalando SQL, sistema e configuração de banco.<br>
-                   -Documentava erros, e auxiliava novo integrantes da equipe com pequenos treinamentos.  
+                    Analista Junior:<br>
+                   -Suporte ao sistema.<br>
+                   -Suporte para impressoras fiscais ECF, SAT e NFC-e, documentação de erros, treinamento de equipe.<br>
+                   -Implantação do sistema, desde a configuração inicial, preparação do servidor, instalação SQL e configuração de banco.<br>
+                    
                 </p>
             </div>
             <div class="work">
